[tool.poetry]
name = "flax-template"
version = "0.1.0"
description = "A template for machine learning with flax"
authors = ["Logan Walls <2934282+LoganWalls@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
jax = "^0.3.13"
jaxlib = "^0.3.10"
tensorflow-gpu = { platform = "linux", version = "^2.9.1" }
tensorflow-macos = { platform = "darwin", version = "^2.9.1" }
flax = "^0.5.2"
numpy = "^1.23.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
ipdb = "^0.13.9"
ipython = "^8.4.0"
isort = "^5.10.1"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
